--- a/app/src/main/res/layout/doctor_list_item.xml
+++ b/app/src/main/res/layout/doctor_list_item.xml
@@ -22,7 +22,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/doctor_date_time"
+            android:id="@+id/doctor_status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/doctor_name"
