--- a/app/src/main/res/layout/fragment_doctor_edit.xml
+++ b/app/src/main/res/layout/fragment_doctor_edit.xml
@@ -45,35 +45,23 @@
             android:textSize="16sp"
             android:layout_marginBottom="25dp" />
 
-    <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/startTimeLayout"
+    <EditText
+            android:id="@+id/startTime"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Hora inicio">
+            android:hint="Hora inicio"
+            android:textColorHint="@color/hint_color"
+            android:textSize="16sp"
+            android:layout_marginBottom="25dp" />
 
-        <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/startTime"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="datetime"
-                android:focusable="false"
-                android:onClick="showTimePicker" />
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/endTimeLayout"
+    <EditText
+            android:id="@+id/endTime"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Hora fin">
-
-        <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/endTime"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="datetime"
-                android:focusable="false"
-                android:onClick="showTimePicker" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:hint="Hora fin"
+            android:textColorHint="@color/hint_color"
+            android:textSize="16sp"
+            android:layout_marginBottom="25dp" />
 
     <LinearLayout
             android:layout_width="match_parent"
