--- a/app/src/main/res/layout/fragment_doctor_edit.xml
+++ b/app/src/main/res/layout/fragment_doctor_edit.xml
@@ -1,166 +1,161 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:padding="16dp">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/doctorImage"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_gravity="center"
-            android:layout_marginBottom="20dp"
-            android:src="@drawable/doctor"
-            app:civ_border_color="@color/black"
-            app:civ_border_width="2dp" />
-
-
-    <TextView
-            android:id="@+id/InfoDoc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="12dp"
-            android:layout_marginBottom="40dp"
-            android:text="Información del doctor"
-            android:textSize="24sp"
-            android:textStyle="bold" />
-
-    <EditText
-            android:id="@+id/nameDoctor"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Nombre"
-            android:textColorHint="@color/hint_color"
-            android:textSize="16sp"
-            android:layout_marginBottom="25dp" />
-
-    <EditText
-            android:id="@+id/lastNameDoctor"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Apellido"
-            android:textColorHint="@color/hint_color"
-            android:textSize="16sp"
-            android:layout_marginBottom="25dp" />
-
-    <EditText
-            android:id="@+id/startTime"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Hora inicio"
-            android:textColorHint="@color/hint_color"
-            android:textSize="16sp"
-            android:layout_marginBottom="25dp" />
-
-    <EditText
-            android:id="@+id/endTime"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Hora fin"
-            android:textColorHint="@color/hint_color"
-            android:textSize="16sp"
-            android:layout_marginBottom="25dp" />
-
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="8dp">
+            android:orientation="vertical"
+            android:padding="16dp">
 
-        <CheckBox
-                android:id="@+id/mondayCheckBox"
+        <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/doctorImage"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="20dp"
+                android:src="@drawable/doctor"
+                app:civ_border_color="@color/black"
+                app:civ_border_width="2dp" />
+
+        <TextView
+                android:id="@+id/InfoDoc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Lunes"
-                android:textSize="15sp"
-                android:textColor="@color/checkbox_text_color"
-                android:layout_weight="1" />
+                android:layout_gravity="center"
+                android:layout_marginTop="12dp"
+                android:layout_marginBottom="40dp"
+                android:text="Información del doctor"
+                android:textSize="24sp"
+                android:textStyle="bold" />
 
-        <CheckBox
-                android:id="@+id/tuesdayCheckBox"
-                android:layout_width="wrap_content"
+        <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/nameDoctorLayout"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Martes"
-                android:textSize="15sp"
-                android:textColor="@color/checkbox_text_color"
-                android:layout_weight="1"
-                android:layout_marginStart="16dp" />
+                android:hint="Nombre"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
-        <CheckBox
-                android:id="@+id/wednesdayCheckBox"
-                android:layout_width="wrap_content"
+            <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/nameDoctor"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="text" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/lastNameDoctorLayout"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Miércoles"
-                android:textSize="15sp"
-                android:textColor="@color/checkbox_text_color"
-                android:layout_weight="1"
-                android:layout_marginStart="16dp" />
+                android:hint="Apellido"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
-        <CheckBox
-                android:id="@+id/thursdayCheckBox"
-                android:layout_width="wrap_content"
+            <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/lastNameDoctor"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="text" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Jueves"
-                android:textSize="15sp"
-                android:textColor="@color/checkbox_text_color"
-                android:layout_weight="1"
-                android:layout_marginStart="16dp" />
+                android:orientation="horizontal"
+                android:weightSum="2">
 
+            <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/startTimeLayout"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:hint="Hora inicio"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+
+                <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/startTime"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="datetime"
+                        android:focusable="false"
+                        android:onClick="showCustomTimePicker" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/endTimeLayout"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:hint="Hora fin"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+
+                <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/endTime"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="datetime"
+                        android:focusable="false"
+                        android:onClick="showCustomTimePicker" />
+            </com.google.android.material.textfield.TextInputLayout>
+        </LinearLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/daysLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Días de trabajo"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_marginTop="16dp">
+
+            <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/days"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="none"
+                    android:focusable="false"
+                    android:onClick="showMultiChoiceDialog" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:layout_marginTop="24dp">
+
+
+            <Switch
+                    android:id="@+id/enabledSwitch"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Habilitado"
+                    android:textColor="@color/switch_text_color"
+                    android:textSize="15sp" />
+        </LinearLayout>
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:layout_marginTop="24dp">
+
+            <Button
+                    android:id="@+id/btn_registrar_doctor"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_marginStart="16dp"
+                    android:text="Actualizar" />
+
+            <Button
+                    android:id="@+id/btn_cancel"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_marginStart="16dp"
+                    android:text="Cancelar" />
+        </LinearLayout>
     </LinearLayout>
-
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-        <CheckBox
-                android:id="@+id/fridayCheckBox"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_weight="1"
-                android:text="Viernes"
-                android:textColor="@color/checkbox_text_color"
-                android:textSize="15sp" />
-
-        <CheckBox
-                android:id="@+id/saturdayCheckBox"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_weight="1"
-                android:text="Sábado"
-                android:textColor="@color/checkbox_text_color"
-                android:textSize="15sp" />
-
-        <CheckBox
-                android:id="@+id/sundayCheckBox"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_weight="1"
-                android:text="Domingo"
-                android:textColor="@color/checkbox_text_color"
-                android:textSize="15sp" />
-
-    </LinearLayout>
-
-    <CheckBox
-            android:id="@+id/enabledCheckBox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:text="Habilitado"
-            android:textColor="@color/checkbox_text_color"
-            android:textSize="15sp" />
-
-    <Button
-            android:id="@+id/btn_registrar_doctor"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:text="Actualizar" />
-
-</LinearLayout>
+</ScrollView>
