--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,5 +20,7 @@
 
     <color name="hint_color">#999999</color>
     <color name="checkbox_text_color">#333333</color>
+    <color name="switch_text_color">#333333</color>
+    <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
 </resources>
