--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -55,7 +55,6 @@
             </LinearLayout>
 
             <LinearLayout
-                    android:id="@+id/onboarding"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="120dp"
@@ -196,45 +195,65 @@
                 android:layout_gravity="center"
                 android:background="@drawable/obboarding_layout"
                 android:orientation="vertical"
+                android:padding="20dp"
                 android:visibility="gone">
 
             <TextView
-                    android:id="@+id/textView3"
+                    android:id="@+id/Home_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:layout_marginBottom="5dp"
+                    android:text="HOME"
+                    android:textAlignment="center"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
             <TextView
-                    android:id="@+id/textView4"
+                    android:id="@+id/description_screen_1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:justificationMode="inter_word"
+                    android:text="En esta vista podrás acceder a las distintas funcionalidades. Puedes reservar una cita, reprogramar una cita o cancelarla."
+                    android:textSize="16sp" />
 
             <ImageView
-                    android:id="@+id/imageView"
+                    android:id="@+id/img_screen_1"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="380dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="10dp"
                     android:src="@drawable/screen_1r" />
 
             <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     android:orientation="horizontal">
 
                 <Button
-                        android:id="@+id/button"
+                        android:id="@+id/btn_inexist"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginEnd="10dp"
                         android:layout_weight="1"
-                        android:text="Button" />
+                        android:text="Prev"
+                        android:visibility="gone"
+                        app:icon="@drawable/mcv_action_previous"
+                        app:iconGravity="textStart" />
 
                 <Button
-                        android:id="@+id/button2"
+                        android:id="@+id/btn_nxt_screen_1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
                         android:layout_weight="1"
-                        android:text="Button" />
+                        android:text="Next"
+                        app:icon="@drawable/mcv_action_next"
+                        app:iconGravity="textEnd" />
             </LinearLayout>
+
         </LinearLayout>
         <!-- onBoarding Screen 1 END -->
 
@@ -430,7 +449,7 @@
                         app:iconGravity="textStart" />
 
                 <Button
-                        android:id="@+id/btn_nxt_screen_4"
+                        android:id="@+id/btn_finish_screen_4"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
