--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -172,12 +172,26 @@
                                     android:layout_weight="0.5"
                                     android:orientation="vertical">
 
-                                <Button
-                                        android:id="@+id/lastOptionHome"
+                                <ImageButton
+                                        android:id="@+id/buttonSessionClose"
                                         android:layout_width="48dp"
                                         android:layout_height="48dp"
                                         android:layout_gravity="center"
-                                        android:background="@drawable/home_buttons_layout" />
+                                        android:adjustViewBounds="true"
+                                        android:background="@drawable/home_buttons_layout"
+                                        android:padding="8dp"
+                                        android:scaleType="fitCenter"
+                                        android:src="@drawable/ic_close_normal" />
+
+                                <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_gravity="center_horizontal"
+                                        android:layout_marginTop="5dp"
+                                        android:text="Cerrar Session"
+                                        android:textColor="@color/text_color"
+                                        android:textSize="18sp"
+                                        android:textStyle="bold" />
                             </LinearLayout>
                         </LinearLayout>
                     </LinearLayout>
