--- a/app/src/main/res/layout/fragment_doctors_list.xml
+++ b/app/src/main/res/layout/fragment_doctors_list.xml
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/ic_search"
             android:drawablePadding="10dp"
-            android:hint="Search doctor..."
+            android:hint="Buscar doctor..."
             android:padding="10dp" />
 
     <ListView
