--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     android:paddingStart="32dp"
     android:paddingEnd="32dp"
-    android:background="@color/primary_dark"
     tools:context=".presentation.register.RegisterFragment">
 
     <com.google.android.material.textfield.TextInputLayout
@@ -29,7 +28,7 @@
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
             android:maxLines="1"
-            android:textColor="@color/primary_text" />
+            android:textColor="@color/primary" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -52,7 +51,7 @@
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:maxLines="1"
-            android:textColor="@color/primary_text" />
+            android:textColor="@color/primary" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -73,7 +72,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLines="1"
-            android:textColor="@color/primary_text" />
+            android:textColor="@color/primary" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <!-- LastName TextInputLayout -->
@@ -95,7 +94,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLines="1"
-            android:textColor="@color/primary_text" />
+            android:textColor="@color/primary" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -117,7 +116,7 @@
             android:layout_height="wrap_content"
             android:inputType="phone"
             android:maxLines="1"
-            android:textColor="@color/primary_text" />
+            android:textColor="@color/primary" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -138,7 +137,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLines="1"
-            android:textColor="@color/primary_text" />
+            android:textColor="@color/primary" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
